# multi_agents

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-test.txt
data/video_scripts/: Conférence résultats financiers 2021 de Renault Group.txt  Conférence résultats financiers 2022 de Renault Group.txt  Conférence résultats financiers 2024 de Renault Group.txt  PLAN STRATEGIQUE RENAULUTION.txt
src/app/: build_embedding_db.py  gradio_app.py  main.py  prompt.py  schema.py  utils.py  vector_database_builder.py
src/app/config/: __init__.py  models.py  paths.py  youtube_urls.py
src/app/data/: video_list.py
src/app/data/video_scripts/: Conférence résultats financiers 2023 de Renault Group.txt
src/app/tools/: __init__.py  api_tool.py  date_tool.py  graph_creator.py  retrieve_tool.py
tests/: README.md  conftest.py  run_tests.py  test_config.py  test_main.py  test_simple.py  test_utils.py  tools.py
