[project]
name = "multi-agents"
version = "0.1.0"
description = ""
authors = [
    {name = "hemxism96",email = "josy6112@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "numpy (<2.0.0)",
    "torch (==2.2.2)",
    "langchain-docling (>=1.0.0,<2.0.0)",
    "yfinance (>=0.2.64,<0.3.0)",
    "langgraph (>=0.5.1,<0.6.0)",
    "youtube-transcript-api (==0.6.1)",
    "langchain-google-genai (>=2.1.6,<3.0.0)",
    "protobuf (==3.20.3)",
    "chromadb (>0.5.12,<0.7.0)",
    "langchain-community (<=0.3.20)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "langchain-chroma (==0.2.2)",
    "langchain-huggingface (>=0.3.0,<0.4.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "gradio (>=5.35.0,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
